ninjabuilder: Don't crash on `sudo ninja install`

Similar patch as done for the make builder, see:
  https://git.reviewboard.kde.org/r/129130/

BUG: 372888
FIXED-IN: 5.1.0